// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPI 3.0 — exclusiveMinimum / exclusiveMaximum > generates correct type for exclusive bounds on object property 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Config = {
  priority: number;
};"
`;

exports[`OpenAPI 3.0 — exclusiveMinimum / exclusiveMaximum > generates nullable number with exclusive bounds 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NullableBounded = number | null;"
`;

exports[`OpenAPI 3.0 — exclusiveMinimum / exclusiveMaximum > generates number type for exclusiveMaximum: true with maximum 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type BoundedMax = number;"
`;

exports[`OpenAPI 3.0 — exclusiveMinimum / exclusiveMaximum > generates number type for exclusiveMinimum: true with minimum 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type BoundedMin = number;"
`;

exports[`OpenAPI 3.0 — exclusiveMinimum / exclusiveMaximum > generates number type when both exclusiveMinimum and exclusiveMaximum are set 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type BothBounded = number;"
`;

exports[`OpenAPI 3.0 — exclusiveMinimum / exclusiveMaximum > generates number type when exclusiveMinimum is false 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NonExclusive = number;"
`;

exports[`OpenAPI 3.0 — exclusiveMinimum / exclusiveMaximum > generates number type without exclusiveMinimum/Maximum 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PlainNumber = number;"
`;
